--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-html, body {
+*{
   margin: 0;
   padding: 0;
-  height: 943px;
+}
+body{
+  height: 100vh;
   background: linear-gradient(to bottom, #FFC200, #ff8c00);
 }
 canvas {
